and throw, e.g. escape) no longer leaves signal handling blocked.

Upward funargs *do* work. Documented with sample code.

The popd builtin returns true.

Reworked `%interactive-loop` to show the "type" of error caught; this
normally denotes the signalling function. Also brought many internal
messages into alignment with this protocol.

xs 1.0 to xs 1.1
----------------

Added a lot of "real-world" sample code.

Switched to the Meson/Ninja build system.

Subscripting allows range bounds to be reversed; this returns the
specified elements in reverse order.

%read is renamed to read.

whatis is renamed to whats in order to avoid collision with the whatis
command for man pages.

Restrict the garbage collector to a single marking thread. Given the
extremely low marker CPU utilization, it makes no sense to allocate
one thread per CPU.

Load ~/.xsin for interactive shells. If a login shell, ~/.xsrc is
loaded before ~/.xsin.

Added $&islogin and %is-login.

Added $&len to count the number of characters in each word provided as
an argument.

Added $&wid to measure the number of display cells occupied by each word
provided as an argument.

Removed the ./xsdebug script, which was still es code and not usable
with xs.

Corrected errors and formatting issues in the man page. Added
some clarifications.

The (optional) editline library is no longer supported.

The assignment operator must be delimited by whitespace in order to
distinguish this usage from "long" arguments (--foo=blah).

The modulus operator (%) may be used in math expressions. This is
implemented by std::fmod.

Added infix relational operators :lt, :le, :gt, :ge, :eq and :ne.
These all use the new comparison function %cmp, which in turn uses
the primitive comparison function &cmp.

Added a builtin printf. This is implemented by the primitive &printf
and requires the ffi library. The underlying implemention is printf(3),
but the xs wrapper limits access to printf(3p) functionality without